--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -10,8 +10,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2022",
     "module": "es2020",
+    "useDefineForClassFields": false,
     "lib": [
       "es2018",
       "dom"
