--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "chart.js": "^2.9.3",
+    "ng2-charts": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
