--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^2.9.3",
     "ng2-charts": "^2.4.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
