task: dockerfile backend fonctionne

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,3 +1,13 @@
-FROM node:16.16.0
+FROM node:16.16.0-alpine AS build
+
+USER node
 WORKDIR /back-end
-RUN 
+
+COPY ./app app/
+COPY ./database database/
+COPY package-lock.json package.json .
+RUN npm install
+
+EXPOSE 9428
+CMD ["npm", "run", "start"]
+# commande terminal docker run -p 8000:9428 build (posteman : /http://localhost:8000/api/status)
