task: ajout de nginx au dockerfile front

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -7,5 +7,10 @@ COPY ./src src/
 COPY angular.json package-lock.json package.json tsconfig.app.json tsconfig.json tsconfig.spec.json tslint.json .
 RUN npm install
 
-EXPOSE 4200
+FROM nginx:1.21.1-alpine
+COPY --from=node . /usr/share/nginx/html
+
+EXPOSE 8080
+
+CMD ["nginx", "-g", "daemon off;"]
 CMD ["npm", "start"]
