--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "8080:4200"
     volumes:
-      - database:/back-end/database
+      - db:/back-end/database:rw
     healthcheck:
       test: curl -f http://localhost:4200/api/status | grep 'ok' || exit 1
       interval: 30s
@@ -29,4 +29,4 @@ services:
         condition: service_healthy
 
 volumes:
-  database:
+  db:
